<resources>
    <string name="app_name">FitnessWithFriends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register">Register</string>
    <string name="register_auth_failed">The email address is already in use by another account</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Log in</string>
    <string name="btn_link_to_register">Sign up</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered Email to get sent password reset instructions.</string>

    <string name="create_profile">Create Profile</string>
    <string name="first_name">First Name</string>
    <string name="edit_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_last_name">Enter your last name</string>
    <string name="e_mail">Email</string>
    <string name="edit_e_mail">Enter your email</string>
    <string name="btn_done">Done</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="duration_workout_array">
        <item>1/2 Hour</item>
        <item>1 Hour</item>
        <item>1 1/2 Hours</item>
        <item>2 Hours</item>
        <item>Custome</item>
    </string-array>

    <string-array name="type_array">
        <item>Running</item>
        <item>Cardio</item>
        <item>Yoga</item>
        <item>Swimming</item>
        <item>Dancing</item>
        <item>Biking</item>
        <item>Playing Sports</item>
        <item>Weight Lifting</item>
        <item>Hiking</item>
    </string-array>
    <string-array name="fav_workout_array">
        <item>Weight Lifting</item>
        <item>Hiking</item>
        <item>Running</item>
        <item>Cardio</item>
        <item>Yoga</item>
        <item>Swimming</item>
        <item>Dancing</item>
        <item>Biking</item>
        <item>Playing Sports</item>
    </string-array>

    <string-array name="fit_level_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_create_workout">Create A Workout</string>
    <string name="title_activity_maps">Map</string>
    <string name="update_image">update_image</string>
    <string name="title_activity_current_maps">Map</string>
    <string name="default_info_title" />
    <string name="default_info_snippet" />
    <string name="pick_place" />
    <string name="edit_profile">Edit Profile</string>
    <string name="get_location">get current location</string>

</resources>