<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/update_imageView"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:gravity="center_vertical"
        android:src="@drawable/defavatar"
        android:foreground="@drawable/rounded_fg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/update_imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/TextViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/EditTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_first_name"
            android:inputType="textPersonName|textCapSentences" />

        <TextView
            android:id="@+id/TextViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/EditTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_last_name"
            android:inputType="textPersonName|textCapSentences"
            android:layout_marginBottom="15dp"/>

        <Spinner
            android:id="@+id/GenderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/gender_array"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/FavWorkoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/fav_workout_array"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/FitLevelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/fit_level_array"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/TextViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_e_mail"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="btnSave"
            android:text="@string/btn_done"
            android:textColor="@color/white"
            app:backgroundTint="#2196F3"
            tools:ignore="OnClick" />
    </LinearLayout>
</RelativeLayout>