<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="456dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="119dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/myWorkoutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Created Workouts" />

        <ListView
            android:id="@+id/myWorkoutsListView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#2196F3">

        </ListView>

        <TextView
            android:id="@+id/availableWorkoutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Available Workouts" />

        <ListView
            android:id="@+id/availableWorkoutsListView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#2196F3">

        </ListView>

        <TextView
            android:id="@+id/joinedWorkoutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Joined Workouts" />

        <ListView
            android:id="@+id/joinedWorkoutsListView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#2196F3" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_above="@id/linearLayout3"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="#2196F3"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textColorLink="#E60F0F"
        android:textSize="10sp"
        app:backgroundTint="#D50000" />

    <LinearLayout
android:id="@+id/linearLayout3"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/black"
android:orientation="horizontal"
android:layout_alignParentBottom="true"
>

<ImageButton
    android:id="@+id/navHome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:contentDescription="@string/title_home"
    android:src="@drawable/ic_home_black_24dp" />

<ImageButton
    android:id="@+id/navMap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:contentDescription="@string/title_map"
    android:src="@drawable/ic_map_black_24dp" />

<ImageButton
    android:id="@+id/navCreateWorkout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:contentDescription="@string/title_create_workout"
    android:src="@drawable/ic_createworkout_black_24dp" />
</LinearLayout>

    <Button
        android:id="@+id/editProfile"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="#2196F3"
        android:onClick="btnEditProfile"
        android:text="@string/edit_profile"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="#2196F3" />

    <TextView
        android:id="@+id/username_Home"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="29dp"
        android:bufferType="normal"
        android:clickable="false"
        android:cursorVisible="true"
        android:text=""
        android:textAllCaps="false"
        android:textColor="#D50000"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>